--- a/Day5/Assignment/Navbar.html
+++ b/Day5/Assignment/Navbar.html
@@ -9,16 +9,16 @@
 <body>
     <div class="menu">
         <ul>
-        <li><a href="Home.com">Home
+        <li><a href="Home.com">Home </a>
             <ul>
                 <li><a href="Home.com">Home1</a></li>
                 <li><a href="Home.com">Home2</a></li>
                 <li><a href="Home.com">Home3</a></li>
             </ul>
 
-        </a>
+    
         </li>
-       <li><a href="About.com">About
+       <li><a href="About.com">About </a>
               <ul>
                 <li><a href="About.com">About1</a></li>
                 <li><a href="About.com">About2</a></li>
